fixed home btn spacing

--- a/src/styling/Design.css
+++ b/src/styling/Design.css
@@ -51,5 +51,11 @@
 }
 
 .NextList {
-    margin-top: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.BackList {
+    margin-top: 10px;
+    
 }
